# flappy_bevy

./: .gitignore  Cargo.toml  Game.toml  readme.md
src/: config.rs  main.rs  utils.rs
src/game/: components.rs  mod.rs
src/game/plugins/: bird.rs  borders.rs  mod.rs  pipes.rs  ui.rs
