[package]
name = "flappy_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_rapier2d = "0.22.0"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

